--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "project2a",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
-  "main": "server.js",
+  "description": "Calorie Tracker and Daily Food Journal",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint \"./**/*.js\"",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    "devStart": "nodemon server.js"
   },
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mysql2": "^1.5.3",
-    "sequelize": "^4.38.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reganmurray22/Project2a.git"
   },
+  "keywords": [
+    "node",
+    "express",
+    "express-handlebars",
+    "mysql",
+    "sequelize"
+  ],
+  "author": "Narcissus",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/reganmurray22/Project2a/issues"
+  },
+  "homepage": "https://github.com/reganmurray22/Project2a#readme",
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
+    "eslint": "^7.11.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.1.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   }
 }
