backend routes, sequelize table and database

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "theman",
-    "password": "password",
-    "database": "exampledb",
+    "username": "root",
+    "password": "",
+    "database": "appDB",
     "host": "localhost",
     "dialect": "mysql"
   },
