--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Goonsquad88$",
+    "password": "Boburule2me!",
     "database": "appDB",
     "host": "localhost",
     "dialect": "mysql"
