added a production to line 7 in the package.json to try and get heroku app to build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Calorie Tracker and Daily Food Journal",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js production",
     "devStart": "nodemon server.js"
   },
   "repository": {
