--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "theman",
-    "password": "password",
+    "username": "root",
+    "password": "null",
     "database": "appDB",
     "host": "localhost",
     "dialect": "mysql"
